Task 18, 19 and 20 completed

--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task11/Flowchart - Task11.xaml
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task11/Flowchart - Task11.xaml
@@ -74,7 +74,7 @@
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="Flowchart___Task11" sap:VirtualizedContainerService.HintSize="1217,614" sap2010:WorkflowViewState.IdRef="Flowchart_1">
     <Flowchart.Variables>
-      <Variable x:TypeArguments="x:String" Name="FruitsName" />
+      <Variable x:TypeArguments="x:String" Name="st_FruitsName" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -92,13 +92,13 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <av:Point x:Key="ShapeLocation">702,125</av:Point>
-          <av:Size x:Key="ShapeSize">200,52</av:Size>
+          <av:Size x:Key="ShapeSize">200,53</av:Size>
           <av:PointCollection x:Key="ConnectorLocation">702,151 672,151 672,239 784.5,239 784.5,269</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" sap2010:Annotation.AnnotationText="Asking User to provide the name of Fruit" DisplayName="Input Fruits Name" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="[&quot;Choose Fruits Name&quot;+vbNewLine+&quot;Apple&quot;+vbNewLine+&quot;Banana&quot;+VbNewLine+&quot;Mango&quot;]" Title="Fruits Name">
+      <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" sap2010:Annotation.AnnotationText="Asking User to provide the name of Fruit" DisplayName="Input Fruits Name" sap:VirtualizedContainerService.HintSize="200,53" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="[&quot;Choose Fruits Name&quot;+vbNewLine+&quot;Apple&quot;+vbNewLine+&quot;Banana&quot;+VbNewLine+&quot;Mango&quot;]" Title="Fruits Name">
         <ui:InputDialog.Result>
-          <OutArgument x:TypeArguments="x:String">[FruitsName]</OutArgument>
+          <OutArgument x:TypeArguments="x:String">[st_FruitsName]</OutArgument>
         </ui:InputDialog.Result>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -108,16 +108,16 @@
         </sap:WorkflowViewStateService.ViewState>
       </ui:InputDialog>
       <FlowStep.Next>
-        <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Using Switch, activity we are assigning the cases " DisplayName="Flow Switch" Expression="[FruitsName]" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_1">
+        <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Using Switch, activity we are assigning the cases " DisplayName="Flow Switch" Expression="[st_FruitsName]" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_1">
           <FlowSwitch.Default>
             <FlowStep x:Name="__ReferenceID1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <av:Point x:Key="ShapeLocation">1003,406</av:Point>
-                  <av:Size x:Key="ShapeSize">200,124</av:Size>
+                  <av:Size x:Key="ShapeSize">200,129</av:Size>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Default Fruit Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;No Fruits Name Choosen&quot;]">
+              <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Default Fruit Name" sap:VirtualizedContainerService.HintSize="200,129" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;No Fruits Name Choosen&quot;]">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -132,9 +132,9 @@
               <av:Point x:Key="ShapeLocation">767,269</av:Point>
               <av:Size x:Key="ShapeSize">70,87</av:Size>
               <av:PointCollection x:Key="Default">802,356 802,386 1103,386 1103,406</av:PointCollection>
-              <av:PointCollection x:Key="AppleConnector">837,312.5 867,312.5 867,252.5 387,252.5 387,469 401,469</av:PointCollection>
-              <av:PointCollection x:Key="BananaConnector">837,290.75 867,290.75 867,239 687,239 687,468 702,468</av:PointCollection>
-              <av:PointCollection x:Key="MangoConnector">837,334.25 867,334.25 867,386 87,386 87,469 100,469</av:PointCollection>
+              <av:PointCollection x:Key="AppleConnector">837,312.5 867,312.5 867,252.5 387,252.5 387,471.5 401,471.5</av:PointCollection>
+              <av:PointCollection x:Key="BananaConnector">837,290.75 867,290.75 867,239 687,239 687,470.5 702,470.5</av:PointCollection>
+              <av:PointCollection x:Key="MangoConnector">837,334.25 867,334.25 867,386 87,386 87,471.5 100,471.5</av:PointCollection>
               <x:Boolean x:Key="IsAnnotationDocked">False</x:Boolean>
               <av:PointCollection x:Key="Case1Connector">767,334.25 767,334.25</av:PointCollection>
             </scg:Dictionary>
@@ -143,10 +143,10 @@
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <av:Point x:Key="ShapeLocation">100,407</av:Point>
-                <av:Size x:Key="ShapeSize">200,124</av:Size>
+                <av:Size x:Key="ShapeSize">200,129</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Mango Fruits Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;You Have choosen Mango&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Mango Fruits Name" sap:VirtualizedContainerService.HintSize="200,129" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;You Have choosen Mango&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -159,10 +159,10 @@
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <av:Point x:Key="ShapeLocation">401,407</av:Point>
-                <av:Size x:Key="ShapeSize">200,124</av:Size>
+                <av:Size x:Key="ShapeSize">200,129</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Apple Fruits Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;You have Choosen Apple&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Apple Fruits Name" sap:VirtualizedContainerService.HintSize="200,129" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;You have Choosen Apple&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -175,10 +175,10 @@
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <av:Point x:Key="ShapeLocation">702,406</av:Point>
-                <av:Size x:Key="ShapeSize">200,124</av:Size>
+                <av:Size x:Key="ShapeSize">200,129</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Banana Fruits Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;You have Choosen Banana&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Banana Fruits Name" sap:VirtualizedContainerService.HintSize="200,129" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;You have Choosen Banana&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
