--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task17/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task17/Main.xaml
@@ -59,6 +59,7 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:Annotation.AnnotationText="Generating Datatable with Text file" DisplayName="Generate Datatable" sap:VirtualizedContainerService.HintSize="476,870" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -76,6 +77,6 @@
     <ui:ReadTextFile File="{x:Null}" Content="[Inputdt]" DisplayName="Reading Text" FileName="Details.txt" sap:VirtualizedContainerService.HintSize="434,80.6666666666667" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
     <ui:GenerateDataTable ColumnSizes="{x:Null}" NewLineSeparator="{x:Null}" Positions="{x:Null}" AutoDetectTypes="False" CSVParsing="True" ColumnSeparators="," DataTable="[Employeedt]" DisplayName="Datatable is generating" sap:VirtualizedContainerService.HintSize="434,202.666666666667" sap2010:WorkflowViewState.IdRef="GenerateDataTable_1" Input="[Inputdt]" UseColumnHeader="True" />
     <ui:WriteRange AddHeaders="True" DataTable="[Employeedt]" DisplayName="Writing the datatable values to excel" sap:VirtualizedContainerService.HintSize="434,114.666666666667" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1" StartingCell="A1" WorkbookPath="Employee.xlsx" />
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="434,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Execution Completed&quot;]" />
+    <ui:LogMessage DisplayName="Process Ends" sap:VirtualizedContainerService.HintSize="434,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Execution Completed&quot;]" />
   </Sequence>
 </Activity>
