--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task22/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task22/Main.xaml
@@ -139,7 +139,7 @@
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
         </ui:ReadRange>
-        <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="586,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[st_Names]" />
+        <ui:LogMessage DisplayName="Log Names" sap:VirtualizedContainerService.HintSize="586,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[st_Names]" />
         <uix:NApplicationCard sap2010:Annotation.AnnotationText="We are using use application activity to fetch the data from relevant website" AttachMode="ByInstance" DisplayName="Use Browser Chrome: XPERIENCE AI - Uppercase" sap:VirtualizedContainerService.HintSize="586,2106" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="DebuggerApi" ScopeGuid="9978c893-134e-43e9-879d-113fe276963e" Version="V2">
           <uix:NApplicationCard.Body>
             <ActivityAction x:TypeArguments="x:Object">
