--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task26/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task26/Main.xaml
@@ -70,7 +70,7 @@
       <AssemblyReference>System.Private.Uri</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="300,140" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="300,287" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="GuessNumber" />
       <Variable x:TypeArguments="x:Int32" Name="RandomNumber" />
@@ -80,18 +80,18 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <StateMachine InitialState="{x:Reference __ReferenceID2}" sap2010:Annotation.AnnotationText="Steps for Guessing the Number:&#xD;&#xA;1. Generating the Random Number&#xD;&#xA;2. Guessing the Number between 1 to 10. &#xD;&#xA;3. Looping the stages to identify the guess stage. &#xD;&#xA;4. Final Execution" DisplayName="State Machine Sequence for Guessing the Random Number" sap:VirtualizedContainerService.HintSize="634,724" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+    <StateMachine InitialState="{x:Reference __ReferenceID2}" sap2010:Annotation.AnnotationText="Steps for Guessing the Number:&#xA;1. Generating the Random Number&#xA;2. Guessing the Number between 1 to 10. &#xA;3. Looping the stages to identify the guess stage. &#xA;4. Final Execution" DisplayName="State Machine Sequence for Guessing the Random Number" sap:VirtualizedContainerService.HintSize="634,724" sap2010:WorkflowViewState.IdRef="StateMachine_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
           <av:Point x:Key="ShapeLocation">270,2.5</av:Point>
           <x:Double x:Key="StateContainerWidth">600</x:Double>
           <x:Double x:Key="StateContainerHeight">600</x:Double>
-          <av:PointCollection x:Key="ConnectorLocation">292,77.5 292,107.5 293.3,107.5 293.3,139</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">291,77.5 291,107.5 293.3,107.5 293.3,139</av:PointCollection>
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <State x:Name="__ReferenceID2" DisplayName="Generate Random Number" sap:VirtualizedContainerService.HintSize="134,62" sap2010:WorkflowViewState.IdRef="State_1">
+      <State x:Name="__ReferenceID2" sap2010:Annotation.AnnotationText="Generating the Random Number" DisplayName="Generate Random Number" sap:VirtualizedContainerService.HintSize="134,104" sap2010:WorkflowViewState.IdRef="State_1">
         <State.Entry>
           <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
             <Assign.To>
@@ -105,8 +105,9 @@
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <av:Point x:Key="ShapeLocation">233,139</av:Point>
-            <av:Size x:Key="ShapeSize">134,62</av:Size>
+            <av:Size x:Key="ShapeSize">134,104</av:Size>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
+            <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <State.Exit>
@@ -116,13 +117,13 @@
           <Transition DisplayName="T1" sap:VirtualizedContainerService.HintSize="450,507" sap2010:WorkflowViewState.IdRef="Transition_1">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:PointCollection x:Key="ConnectorLocation">300,201 300,251</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">300,243 300,251</av:PointCollection>
                 <x:Int32 x:Key="SrcConnectionPointIndex">39</x:Int32>
                 <x:Int32 x:Key="DestConnectionPointIndex">38</x:Int32>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <Transition.To>
-              <State x:Name="__ReferenceID0" DisplayName="Guess the Random Number" sap:VirtualizedContainerService.HintSize="134,62" sap2010:WorkflowViewState.IdRef="State_2">
+              <State x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Guessing the random Number" DisplayName="Guess the Random Number" sap:VirtualizedContainerService.HintSize="134,104" sap2010:WorkflowViewState.IdRef="State_2">
                 <State.Entry>
                   <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="334,239" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Guess the Number between 1 to 10" Title="Guess the Number">
                     <ui:InputDialog.Result>
@@ -133,8 +134,9 @@
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <av:Point x:Key="ShapeLocation">233,251</av:Point>
-                    <av:Size x:Key="ShapeSize">134,62</av:Size>
+                    <av:Size x:Key="ShapeSize">134,104</av:Size>
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                    <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
                 <State.Exit>
@@ -144,7 +146,7 @@
                   <Transition DisplayName="Higher Number" sap:VirtualizedContainerService.HintSize="450,507" sap2010:WorkflowViewState.IdRef="Transition_2">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">233,291.3 206.5,291.3 206.5,343 266.5,343 266.5,313</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">233,318.6 206.5,318.6 206.5,385 266.5,385 266.5,355</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">49</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">19</x:Int32>
                       </scg:Dictionary>
@@ -160,7 +162,7 @@
                   <Transition DisplayName="Lower Number" sap:VirtualizedContainerService.HintSize="450,507" sap2010:WorkflowViewState.IdRef="Transition_3">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">367,275.8 386.8,275.8 386.8,343 326.8,343 326.8,313</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">367,292.6 386.8,292.6 386.8,385 326.8,385 326.8,355</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">28</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">55</x:Int32>
                       </scg:Dictionary>
@@ -182,12 +184,13 @@
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
                     <Transition.To>
-                      <State x:Name="__ReferenceID1" DisplayName="Final State (Sucessfull Execution)" sap:VirtualizedContainerService.HintSize="134,62" sap2010:WorkflowViewState.IdRef="State_3" IsFinal="True">
+                      <State x:Name="__ReferenceID1" sap2010:Annotation.AnnotationText="Sucessfull Execution" DisplayName="Final State (Sucessfull Execution)" sap:VirtualizedContainerService.HintSize="134,104" sap2010:WorkflowViewState.IdRef="State_3" IsFinal="True">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <av:Point x:Key="ShapeLocation">423,269</av:Point>
-                            <av:Size x:Key="ShapeSize">134,62</av:Size>
+                            <av:Size x:Key="ShapeSize">134,104</av:Size>
                             <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                            <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
                       </State>
