--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task 27/Addition.xaml
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task 27/Addition.xaml
@@ -89,7 +89,7 @@
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
+      <Assign DisplayName="Addition" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
         <Assign.To>
           <OutArgument x:TypeArguments="x:Int32">[Out_AddResult]</OutArgument>
         </Assign.To>
